chore/style(root/protocolErrorHandler): fixed alignment, added nav selector

--- a/app/base/sass/ui-handlers/_protocolErrorHandler.scss
+++ b/app/base/sass/ui-handlers/_protocolErrorHandler.scss
@@ -13,6 +13,8 @@
       line-height: 150%;
     }
     & p {
+      display: flex;
+      flex-direction: column;
       & nav {
         display: inline;
         width: min-content;
